--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,19 @@
   <meta charset="utf-8">
   <title>NewsX</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    .loader{
+        background-image: url("/assets/images/news.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: white;
+    }
+  </style>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root class="p-ab w-full h-full loader">
+  </app-root>
 </body>
 </html>
